--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ uvicorn = "^0.35.0"
 asyncpg = "^0.30.0"
 passlib = "^1.7.4"
 python-jose = {extras = ["cryptography"], version = "^3.5.0"}
+python-json-logger = "^3.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
